--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 }
 
 img {
+  max-height: 125px;
   transform: scale(var(--escala, 1));
   transition: transform 0.25s;
     filter: grayscale(100%);
